@@ -124,6 +124,10 @@ Changes from 2.8.0 to 2.8.1
   or explicitly forfeit building the tool (some distro packages missed it
   quietly in the past) [#1560]
 
+- An `upsdebugx_report_search_paths()` method in NUT common code was added,
+  and exposed in `libnutscan.so` builds in particular - API version for the
+  public library was bumped [#317]
+
 - `configure` script, reference init-script and packaging templates updated
   to eradicate `@PIDPATH@/nut` ambiguity in favor of `@ALTPIDPATH@` for the
   unprivileged processes vs. `@PIDPATH@` for those running as root [#1719]
