@@ -110,6 +110,9 @@ void nutscan_init(void)
 {
 	char *libname = NULL;
 
+	/* Report library paths we would search, at given debug verbosity level */
+	upsdebugx_report_search_paths(1);
+
 #ifdef HAVE_PTHREAD
 /* TOTHINK: Should semaphores to limit thread count
  * and the more naive but portable methods be an
